--- a/appsscript.json
+++ b/appsscript.json
@@ -1,6 +1,11 @@
 {
   "timeZone": "Europe/Paris",
   "dependencies": {
+    "enabledAdvancedServices": [{
+      "userSymbol": "Drive",
+      "serviceId": "drive",
+      "version": "v2"
+    }]
   },
   "exceptionLogging": "STACKDRIVER",
   "runtimeVersion": "V8"
